# iflow-bot-gateway

./: .gitignore  CHANGELOG.md  LICENSE  README.md  iflow_terminal.py  pyproject.toml
iflow_bot/: __init__.py  __main__.py  mcp_proxy.py
iflow_bot/bus/: __init__.py  events.py  queue.py
iflow_bot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
iflow_bot/cli/: __init__.py  commands.py  iflow_passthrough.py
iflow_bot/config/: __init__.py  loader.py  schema.py
iflow_bot/cron/: __init__.py  service.py  types.py
iflow_bot/engine/: __init__.py  acp.py  adapter.py  analyzer.py  loop.py  retry.py  stdio_acp.py
iflow_bot/engine/commands/: __init__.py  base.py  registry.py
iflow_bot/engine/commands/handlers/: __init__.py  cron.py  help.py  language.py  model.py  ralph.py  registry_builtins.py  session.py  skills.py  skills_support.py  status.py
iflow_bot/heartbeat/: __init__.py  service.py
iflow_bot/progress/: __init__.py  manager.py
iflow_bot/session/: __init__.py  manager.py  recorder.py
iflow_bot/templates/: AGENTS.md  BOOT.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  TOOLS.md  __init__.py
iflow_bot/templates/memory/: MEMORY.md
iflow_bot/templates/ralph/prd/: clarify_questions.md  clarify_system.md  prd_rule.md  prd_system.md  prd_writer.md  prd_writer_system.md
iflow_bot/templates/ralph/role/: debugger.md  default.md  devops.md  engineer.md  qa.md  researcher.md  writer.md
iflow_bot/templates/ralph/rules/: ralph_prompt.md  ralph_system.md
iflow_bot/utils/: __init__.py  helpers.py  platform.py
iflow_bot/web/: __init__.py  server.py
iflow_bot/web/static/: style.css
iflow_bot/web/templates/: chat.html  config.html  conversation_detail.html  conversations.html  dashboard.html  logs.html
